--- a/index.html
+++ b/index.html
@@ -59,18 +59,26 @@
       <div class="row"></div>
     </div>
   <!--Column 3 that spans 25% of the viewport-->
-    <div class="col-xs-6 col-sm-3 col-md-63">
+    <div class="col-xs-3 col-sm-3 col-md-3">
         <!--Column 3 - Row 1-->
-        <div class="row"></div>
+        <div class="row">
+         <h2>Letters Available</h2>
+        </div>
         <!--Column 3 - Row 2-->
-        <div class="row"></div>
+        <div class="row">
+          <h2>SCORE:</h2>
+        </div>
         <!--Column 3 - Row 3-->
-        <div class="row"></div>
+        <div class="row">
+          <h3>How To Play</h3>
+        </div>
     </div>
   </div>
   </div>
-
-
 </body>
+<footer>
+  <h4>About the Developer</h4>
+  <h4>Acknowledgements</h4>
+</footer>
 
 </html>
