--- a/index.html
+++ b/index.html
@@ -5,39 +5,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>Hot and Spicy WordGuess</title>
+
+  <!--Link Bootstrap-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+  <!--Link CSS Stylesheet-->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <!--Link Javascript-->
   <link rel="javascript" type="text/javascript" href="assets/javascript/game.js">
 </head>
+<!--Add Header-->
 <header>
-  <h1>Welcome to Hot & Spicy Word Guess!</h1>
+  <h1 class="textorange">Welcome to Hot & Spicy Word Guess!</h1>
 </header>
+<!--Main Content Body-->
 <body>
   <!--Game Container-->
-  <div class="container">
+  <div class="container.fluid">
   <!--Row 1 that spans the whole width-->
   <div class="row">
   <!--Background Image of Flaming Pepper-->
-  <img src="assets/images/flamingPepper.jpg">
+  <img class="img-responsive" src="assets/images/flamingPepper.jpg" alt="Jalapenos on fire">
   <!--Column 1 that spans 25% of the viewport-->
     <!--Column 1 Row 1-->
     <div class="col-xs-3 col-sm-3 col-md-3">
-      <div class="row">
+      <div class="row pull-left">
         <h2>Choose Your Heat Level:</h2>
         <!--List Difficulty Levels-->
-          <h3>Mild</h3>
-          <h3>Medium</h3>
-          <h3>Spicy</h3>
-          <h3>Extra Spicy</h3>
+          <button type="button" class="btn btn-primary btn-lg btn-block">Mild</button>
+          <button type="button" class="btn btn-default btn-lg btn-block">Medium</button>
+          <button type="button" class="btn btn-default btn-lg btn-block">Spicy</button>
+          <button type="button" class="btn btn-default btn-lg btn-block">Extra Spicy</button>
       </div>
     <!--Column 1 Row 2-->
       <div class="row">
         <h2>Your Category Is:</h2>
         <!--List Categories-->
+        
           <h3>Candy</h3>
           <h3>Chilies/Peppers</h3>
           <h3>Deserts</h3>
