--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   <!--Link Javascript-->
   <link rel="javascript" type="text/javascript" href="assets/javascript/game.js">
 </head>
-<!--Add Header-->
-<header>
-  <h1 class="textorange">Welcome to Hot & Spicy Word Guess!</h1>
-</header>
+<
 <!--Main Content Body-->
 <body>
   <!--Game Container-->
@@ -31,7 +28,11 @@
   <!--Row 1 that spans the whole width-->
   <div class="row">
   <!--Background Image of Flaming Pepper-->
-  <img class="img-responsive" src="assets/images/flamingPepper.jpg" alt="Jalapenos on fire">
+  <img class="img-responsive flamepepperimg" src="assets/images/flamingPepper.jpg" alt="Jalapenos on fire">
+  !--Add Header-->
+<header>
+  <h1 class="textorange">Welcome to Hot & Spicy Word Guess!</h1>
+</header>
   <!--Column 1 that spans 25% of the viewport-->
     <!--Column 1 Row 1-->
     <div class="col-xs-3 col-sm-3 col-md-3">
