--- a/index.html
+++ b/index.html
@@ -24,56 +24,67 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
   crossorigin="anonymous"></script>
 
-  <link rel="javascript" type="text/javascript" href="assets/javascript/game.js">
+  <script type="text/javascript" href="assets/javascript/game.js"></script>
 
 </head>
-<!--Add Header-->
 
-<header>
-    <h1 class="textorange"><strong>Welcome to Hot & Spicy Word Guess!</strong></h1>
-</header>
 <!--Main Content Body-->
 <body>
+  <!--Add Header-->
+  <header>
+    <h1 class="textorange"><strong>Welcome to Hot & Spicy Word Guess!</strong></h1>
+  </header>
   <!--Game Container-->
-  <div class="container.fluid">
+  <div class="container-fluid">
   <!--Row 1 that spans the whole width-->
     <div class="row">
     <!--Column 1-->
-      <div class="col-xs-2 col-sm-2 col-md-2">
+      <div class="col-2">
         <h3 class ="textorange">Choose Your Heat Level:</h3>
         <!--List Difficulty Levels-->
-          <button type="button" class="btn btn-primary btn-lg btn-block">Mild</button>
+          <button type="button" data-type="mildLevel" class="btn btn-primary btn-lg btn-block">Mild</button>
           <button type="button" class="btn btn-default btn-lg btn-block">Medium</button>
           <button type="button" class="btn btn-default btn-lg btn-block">Spicy</button>
           <button type="button" class="btn btn-default btn-lg btn-block">Extra Spicy</button>
     
         <h3 class="textorange">Your Category Is:</h3>
         <!--List Categories-->
-          <h4>Candy</h4>
-          <h4>Chilies/Peppers</h4>
-          <h4>Deserts</h4>
-          <h4>Spices</h4>
-          <h4>Volcanoes</h4>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item active">
+              <h4>Candy</h4>
+          </li>
+          <li class="list-group-item">
+              <h4>Chilies/Peppers</h4>
+          </li>
+          <li class="list-group-item">
+              <h4>Deserts</h4>
+          </li>
+          <li class="list-group-item">
+              <h4>Spices</h4>
+          </li>
+          <li class="list-group-item">
+              <h4>Volcanoes</h4>
+          </li>
+        </ul>
       </div>
     <!--Column 2-->
-      <div class="col-xs-8 col-sm-8 col-md-8">
-        <!--Image of Flaming Pepper-->
-        <img class="img-responsive flamepepperimg" src="assets/images/flamingPepper.jpg" alt="Jalapenos on fire">
-      
+      <div class="col-8 bgimage">
         <!--Column 2 - Row 1-->
-        <div class="row">WordBox Here</div>
+        <div class="row wordbox">WordBox Here</div>
         <!--Column 2 - Row 2-->
         <div class="row">Guess Letter</div>
         <!--Column 2 - Row 3-->
         <div class="row">Letters Guessed</div>
       </div>
       <!--Column 3-->
-      <div class="col-xs-2 col-sm-2 col-md-2">
+      <div class="col-2">
           <h4="textorange">Letters Available</h4>
             <p>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z '</p>
-            <br></hr>
+            <br>
+          </hr>
           <h3="textorange">SCORE:</h3>
-            <br></hr>
+            <br>
+          </hr>
           <h3="textorange">How To Play</h3>
       </div>
     </div>
