Add pseudocode in Javascript

--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
       </div>
       <!--Column 3-->
       <div class="col-2">
-          <h4="textorange">Letters Available</h4>
-            <p>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z '</p>
+        <div class="card">
+          <h4 class ="textorange card-title">Letters Available</h4>
+            <p class="card-body">a b c d e f g h i j k l m n o p q r s t u v w x y z '</p>
+        </div>
             <br>
           </hr>
           <h3="textorange">SCORE:</h3>
             <br>
           </hr>
           <h3="textorange">How To Play</h3>
+        
       </div>
     </div>
     
